# mme_eval

./: .aidp_proxy.py  .cursorignore  .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  MIGRATION.md  PRODUCT.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.json
.codex/: hooks.json
.cursor/: hooks.json
.impeccable/: design.json
calibration/: human_scores.example.yaml
cases/: README.md
docs/: breast-cancer-primer.md  heuristics-changelog.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  manifest.json
medeval/: __init__.py  cli.py  config.py  judge_labels.py  loader.py  models.py  pairwise.py  retention.py  retry.py  run_slug.py  service.py  trace_store.py
openspec/: config.yaml
scripts/: aidp_proxy.py  audit_case_redundancy.py  audit_multi_turn_coverage.py  check_heuristics_changelog.py  compute_agreement.py  db_queries.sql  dev_platform.sh  docker-entrypoint.sh  import_benchmark_from_feishu.py  lint_hard_gate_comments.py  scan_failure_tags.py  serve_platform.sh  sync_nginx_static.sh  verify_frontend.sh
server/: README.md  __init__.py  app.py  auth.py  benchmarks.py  compare.py  constants.py  datetime_json.py  db.py  deps.py  eval_job.py  feishu_base.py  feishu_drive.py  feishu_media.py  feishu_oauth.py  feishu_sheet.py  import_history.py  ingest.py  jobs.py  models_db.py  online_eval_job.py  pairwise_job.py  paths.py  (+4 more)
(+896 files in other folders)
